# docverify

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  requirements.txt  start.sh  ui_plan.md
app/: forensics.py  insights.py  pipeline.py
backend/: Dockerfile  analyzer.py  app.py  audit.py  db.py  ledger_client.py  requirements.txt
backend/app/: audit.py  llm.py  main.py
backend/pipeline/: main.py  pipeline.py
docs/: ideation_doc.md  implementation_audit.md  pitch_deck.md  wiring_plan.md
docs/design/: detection-depth.md
frontend/: .dockerignore  Dockerfile  package-lock.json
frontend/src/: App.css  App.tsx  routeTree.gen.ts  styles.css
frontend_backup/: package-lock.json  package.json
frontend_backup/src/: App.css  App.tsx  index.css
ledger/: Dockerfile  entrypoint.sh  package-lock.json  package.json
ledger/contracts/: DocRegistry.sol
ledger/scripts/: deploy.mjs
ledger/test/: DocRegistry.ts
model/: .dockerignore  Dockerfile  app.py  requirements.txt
model/pipeline/: analyze.py  forensics.py  ingestion.py  insights.py  llm.py  models.py  registry.py
samples/: generate_samples.py
schema/: __init__.py  _base.py  enums.py  generate.py  models.py
security/: Dockerfile  app.py  converter.py  evidence.py  forensics.py  main.py  requirements.txt  scanner.py  utils.py
static/: app.js  index.html
temp/: README.md  pyproject.toml
temp/app/: cross_check.py  ingestion.py  models.py  pipeline.py  semantic.py
temp/static/: style.css
temp/tests/: test_pipeline.py
tests/: conftest.py
(+36 files in other folders)
