[project]
name = "docverify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.2",
    "pytesseract>=0.3.13",
    "pytest>=9.0.3",
    "python-multipart>=0.0.32",
    "reportlab>=4.5.1",
    "uvicorn[standard]>=0.49.0",
]
